--- a/src/server/tbcase-views/views.njk
+++ b/src/server/tbcase-views/views.njk
@@ -1,5 +1,12 @@
 {% extends 'layouts/page.njk' %}
 
+{% from "govuk/components/input/macro.njk" import govukInput %}
+{% from "govuk/components/select/macro.njk" import govukSelect %}
+{% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
+{% from "govuk/components/radios/macro.njk" import govukRadios %}
+{% from "govuk/components/button/macro.njk" import govukButton %}
+{% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
+
 {% set breadcrumbs = [
   {
     text: "Home",
@@ -10,8 +17,8 @@
     href: "/tbcase/case-details"
   },
   {
-    text: pageTitle,
-    href: request.path
+    text: "Views",
+    href: "/tbcase/views"
   }
 ] %}
 
@@ -22,22 +29,206 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <span class="govuk-caption-l">{{ caption }}</span>
-      <h1 class="govuk-heading-l">{{ heading }}</h1>
+      <!-- Close form button -->
+      <div class="govuk-!-text-align-right govuk-!-margin-bottom-4">
+        <a href="/" class="govuk-link" aria-label="Close TB Case Form">
+          <span aria-hidden="true">✕</span> Close form
+        </a>
+      </div>
       
+      <span class="govuk-caption-l">TBCMS</span>
+      <h1 class="govuk-heading-l">TB Case Form - Views Configuration</h1>
+      
+      <!-- Case Context Header -->
+      <div class="govuk-summary-card govuk-!-margin-bottom-4">
+        <div class="govuk-summary-card__title-wrapper">
+          <h2 class="govuk-summary-card__title">Case Information</h2>
+        </div>
+        <div class="govuk-summary-card__content">
+          <div class="govuk-grid-row">
+            <div class="govuk-grid-column-one-half">
+              {{ govukInput({
+                label: {
+                  text: "CPH Number",
+                  classes: "govuk-label--s"
+                },
+                id: "cph-number",
+                name: "cph-number",
+                value: "10/071/0109",
+                classes: "govuk-!-margin-bottom-0"
+              }) }}
+            </div>
+            <div class="govuk-grid-column-one-half">
+              <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Auto Populated Incident List</h3>
+              <ul class="govuk-list">
+                <li class="govuk-!-margin-bottom-2">
+                  <a href="/tbcase/case-details?incident=25/12345" class="govuk-link">
+                    <strong>25/12345</strong> (Current)
+                  </a>
+                </li>
+                <li class="govuk-!-margin-bottom-2">
+                  <a href="/tbcase/case-details?incident=24/98765" class="govuk-link">
+                    24/98765 (Previous)
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <!-- Service Navigation -->
+      {% set activePage = "views" %}
       {% include "includes/tb-service-navigation.html" %}
       
-      <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
-        <div class="govuk-notification-banner__header">
-          <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-            Information
-          </h2>
+      <!-- Views Content -->
+      <div class="govuk-!-margin-top-6">
+        <form action="#" method="post">
+          
+          <!-- Region Selection -->
+          <fieldset class="govuk-fieldset">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <h2 class="govuk-fieldset__heading">Region Selection</h2>
+            </legend>
+            
+            <div class="govuk-grid-row">
+              <div class="govuk-grid-column-one-quarter">
+                {{ govukSelect({
+                  id: "region",
+                  name: "region",
+                  label: { text: "Region", classes: "govuk-label--s" },
+                  hint: { text: "Select the region" },
+                  items: [
+                    { value: "", text: "Please select" },
+                    { value: "wales", text: "Wales" },
+                    { value: "england", text: "England" },
+                    { value: "scotland", text: "Scotland" },
+                    { value: "northern-ireland", text: "Northern Ireland" }
+                  ]
+                }) }}
+              </div>
+            </div>
+          </fieldset>
+
+          <!-- Visible Pages Configuration -->
+          <fieldset class="govuk-fieldset govuk-!-margin-top-6">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <h2 class="govuk-fieldset__heading">Visible Pages</h2>
+            </legend>
+            
+            <div class="govuk-grid-row">
+              <div class="govuk-grid-column-one-quarter">
+                {{ govukCheckboxes({
+                  idPrefix: "case-details",
+                  name: "visible-pages",
+                  fieldset: {
+                    legend: { text: "Main Pages", classes: "govuk-label--s" }
+                  },
+                  items: [
+                    { value: "case-details", text: "Case Details" },
+                    { value: "eartags", text: "Eartags" },
+                    { value: "allocations", text: "Allocations" },
+                    { value: "contigs", text: "Contigs" }
+                  ]
+                }) }}
+              </div>
+              <div class="govuk-grid-column-one-quarter">
+                {{ govukCheckboxes({
+                  idPrefix: "valuations",
+                  name: "visible-pages",
+                  fieldset: {
+                    legend: { text: "Additional Pages *", classes: "govuk-label--s" }
+                  },
+                  items: [
+                    { value: "valuations", text: "** Valuations" },
+                    { value: "vol-ir-slaughter", text: "* Vol IR Slaughter" },
+                    { value: "gis", text: "GIS" },
+                    { value: "radial-testing", text: "Radial Testing" }
+                  ]
+                }) }}
+              </div>
+              <div class="govuk-grid-column-one-quarter">
+                {{ govukCheckboxes({
+                  idPrefix: "removals",
+                  name: "visible-pages",
+                  fieldset: {
+                    legend: { text: "Process Pages", classes: "govuk-label--s" }
+                  },
+                  items: [
+                    { value: "removals", text: "Removals" },
+                    { value: "tracings", text: "Tracings" },
+                    { value: "drfs", text: "DRFs" },
+                    { value: "postkill", text: "PostKill" }
+                  ]
+                }) }}
+              </div>
+            </div>
+
+            <div class="govuk-grid-row govuk-!-margin-top-4">
+              <div class="govuk-grid-column-full">
+                <p class="govuk-body-s">
+                  <strong>* Wales Only</strong><br>
+                  <strong>** Wales and Scotland Only</strong>
+                </p>
+              </div>
+            </div>
+          </fieldset>
+
+          <!-- Field Staff Dropdowns Configuration -->
+          <fieldset class="govuk-fieldset govuk-!-margin-top-6">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <h2 class="govuk-fieldset__heading">Field Staff Dropdowns *</h2>
+            </legend>
+            
+            <div class="govuk-grid-row">
+              <div class="govuk-grid-column-full">
+                {{ govukRadios({
+                  idPrefix: "field-staff-filter",
+                  name: "field-staff-filter",
+                  fieldset: {
+                    legend: { text: "Field Staff Filtering", classes: "govuk-label--s" }
+                  },
+                  hint: { text: "Select how field staff dropdowns should be filtered" },
+                  items: [
+                    { value: "cph-region", text: "Filtered by CPH Region", checked: true },
+                    { value: "admin-region", text: "Filtered by Admin Region" },
+                    { value: "not-filtered", text: "Not Filtered" }
+                  ]
+                }) }}
+              </div>
+            </div>
+
+            <div class="govuk-grid-row govuk-!-margin-top-4">
+              <div class="govuk-grid-column-full">
+                <p class="govuk-body-s">
+                  <strong>* Excludes Wales and Scotland Valuations</strong>
+                </p>
+              </div>
+            </div>
+          </fieldset>
+
+        </form>
+      </div>
+
+      <!-- Action Buttons and Tools Section -->
+      <div class="govuk-grid-row govuk-!-margin-top-6">
+        <div class="govuk-grid-column-two-thirds">
+          <div class="govuk-button-group">
+            {{ govukButton({
+              text: "Save Configuration",
+              classes: "govuk-button"
+            }) }}
+            {{ govukButton({
+              text: "Reset to Default",
+              classes: "govuk-button--secondary"
+            }) }}
+          </div>
         </div>
-        <div class="govuk-notification-banner__content">
-          <p class="govuk-notification-banner__heading">
-            Form fields to be implemented based on Slide6.png requirements.
-          </p>
+        
+        <!-- Tools Section -->
+        <div class="govuk-grid-column-one-third">
+          <h2 class="govuk-heading-m">Tools</h2>
+          <p class="govuk-body-s">Tools depending on selected tab.</p>
         </div>
       </div>
     </div>
